--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,287 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.container {
+	max-width: 900px;
+	margin: auto;
+	border: 1px solid black;
+	background-color: lightgray;
+}
+
+header {
+  display: flex;
+	width: 100%;
+	background-color: teal;
+	padding: 15px 0 15px 0; */
+	z-index: 9999;
+}
+
+header nav {
+  display: flex;
+  width: 75%;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+header nav a {
+	font-family: 'Orbitron', sans-serif;
+	color: white;
+	text-decoration: none;
+}
+
+.logo {
+	width: 25%;
+	height: 36px;
+	/* background-image: url("../img/logo.png");
+  background-repeat: no-repeat; */
+  order: 999;
+}
+
+.top-content {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	margin-top: 37px;
+}
+
+.tc-text {
+	text-align: center;
+	margin-left: 40px;
+}
+
+.inno {
+	font-size: 65px;
+
+	animation: slam 0.5s;
+	animation-timing-function: ease-in;
+}
+
+@keyframes slam {
+0%
+{ 
+	transform: scale(10, 10);
+	opacity: 0;
+}
+40%
+{
+	opacity: 0;
+}
+100% 
+{
+	transform: scale(1, 1);
+	opacity: 1;
+}
+}
+
+.top-image {
+	width: 400px;
+	height: 400px;
+	background-image: url("../img/header-img.png");
+	background-repeat: no-repeat;
+	margin-top: 25px;
+}
+
+.main-content {
+	display: flex;
+	flex-flow: row wrap;
+	margin-top: 20px;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	padding: 20px 0px 20px 20px;
+}
+
+.mc-top {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+	padding-bottom: 20px;
+}
+
+.mc-top-1, .mc-top-2 {
+	/* display: flex;
+	flex-flow: column wrap; */
+	width: 45%;
+}
+
+.mc-img {
+	width: 100%;
+	height: 182px;
+	background-image: url("../img/mid-page-accent.jpg");
+	background-repeat: no-repeat;
+}
+
+.mc-bottom {
+  display: flex;
+  justify-content: space-evenly;
+	margin-top: 20px;
+}
+
+.mcb-1, .mcb-2, .mcb-3 {
+	/* display: flex;
+	flex-flow: column wrap; */
+	width: 30%;
+}
+
+address {
+	margin-top: 30px;
+	margin-left: 20px;
+}
+
+.number {
+	margin: 15px 0 15px 0;
+}
+
+footer {
+	text-align: center;
+	margin-top: 50px;
+}
+
+/* Services page */
+
+.services-header-img {
+	margin-top: 44px;
+}
+
+.services {
+	margin-left: 10px;
+	margin-top: 20px;
+}
+
+.services-text {
+	font-size: 50px;
+}
+
+.main-content-services {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+.mcs {
+	border: 1px solid black;
+	width: 400px;
+	padding: 15px;
+	margin: 20px 0 20px 0;
+	background-color: white;
+}
+
+.mcs button {
+	margin-top: 20px;
+	padding: 10px 20px 10px 20px;
+	background-color: white;
+}
+
+.bottom-services {
+	display: flex;
+	height: 300px;
+	width: 45%;
+	flex-flow: column wrap;
+	justify-content: space-evenly;
+	margin-left: 10px;
+}
+
+.services-list {
+	list-style-type: square;
+	margin-left: 20px;
+	line-height: 1.5;
+}
+
+.services-info-img {
+	margin-left: 50px;
+	align-self: flex-end;
+}
+
+@media (max-width: 800px) {
+	.container {
+    max-width: 800px;
+  }
+
+  .logo {
+    order: 0;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  header {
+    flex-flow: row wrap;
+  }
+
+  header nav {
+    order: 2;
+    width: 100%;
+  }
+
+  .top-image {
+    display: none;
+  }
+}
