--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@ header {
   display: flex;
 	width: 100%;
 	/* background-color: teal; */
-	padding: 15px 0 15px 0; */
+	padding: 15px 0 15px 0;
 	z-index: 9999;
 }
 
